--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,6 @@ item {
     border-width: 1px;
     border-style: solid;
     border-radius: 20px;
-    padding: 30px;
+    padding: 15px 30px;
     direction: column;
 }
